# filtrar_cvs

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  job_description.txt  pyproject.toml
.claude/: settings.local.json
scripts/: test_api.py
src/app/: config.py  cv_processor.py  jobs_dispatch.py  llm.py  main.py  prompt.py  pydantic_models.py  storage.py  text_extraction.py  worker.py
