[project]
name = "filtrar-cvs"
version = "0.3.0"
description = "Motor de screening de CVs para SaaS — FastAPI + Cloud Run Jobs + GCS + LiteLLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "email-validator>=2.1.0",
    # FastAPI
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # LLM provider-agnostic
    "litellm>=1.50.0",
    # Requerido por litellm.completion(num_retries=...) — backoff de reintentos
    "tenacity>=8.0.0",
    # GCP
    "google-cloud-storage>=2.18.0",
    "google-cloud-run>=0.10.0",
    "google-auth>=2.30.0",
    # Document parsing (texto plano)
    "pypdf>=4.2.0",
    "python-docx>=1.1.0",
    # Scripts de prueba
    "requests>=2.31.0",
]
